--- a/app/src/main/res/drawable-v24/btn_box_rectangular_corner.xml
+++ b/app/src/main/res/drawable-v24/btn_box_rectangular_corner.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/holo_red_dark" />
+    <solid android:color="@color/cardview_shadow_start_color" />
     <size android:height="140dp"  />
 
     <corners android:radius="32dp" />
