Completed recycler view setup

--- a/app/src/main/res/layout/colour_game_fragment.xml
+++ b/app/src/main/res/layout/colour_game_fragment.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.plentastudio.colorgame.ui.ColourGameViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,16 +18,13 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_color_game"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:spanCount="3"
-            tools:listitem="@layout/list_item_color_game"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/list_item_color_game" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
