--- a/app/src/main/res/drawable-v24/btn_box_rectangular_corner.xml
+++ b/app/src/main/res/drawable-v24/btn_box_rectangular_corner.xml
@@ -3,9 +3,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/cardview_shadow_start_color" />
-    <size android:height="140dp"  />
+    <solid android:color="#fff" />
+    <size android:width="100dp" android:height="100dp" />
 
-    <corners android:radius="32dp" />
+    <corners android:radius="16dp"
+        />
 
 </shape>
