--- a/app/src/main/res/layout/colour_game_fragment.xml
+++ b/app/src/main/res/layout/colour_game_fragment.xml
@@ -2,9 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-
         <variable
             name="viewModel"
             type="com.plentastudio.colorgame.ui.ColourGameViewModel" />
@@ -20,6 +18,7 @@
             android:id="@+id/rv_color_game"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="#343434"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
